# paper-ai-analyzer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  debug_fetch_email.py  main.py  pyproject.toml  requirements.txt  start_academic_agent.bat  stop_academic_agent.bat  stop_academic_agent.ps1
.claude/: handoff.md  spec.md  todo.md  worklog.md
frontend/src/: api.ts  main.tsx  styles.css  types.ts
paper_analyzer/agent/: __init__.py  memory.py  runtime.py  state.py  tools.py
paper_analyzer/data/: schema.py
paper_analyzer/embedding/: embedder.py  similarity.py
paper_analyzer/fulltext/: __init__.py  downloader.py  manual.py  resolver.py  source.py  spis.py
paper_analyzer/ingestion/: email_reader.py  metadata_enricher.py  wos_browser.py  wos_parser.py
paper_analyzer/llm/: analyzer.py  client.py  prompt.py
paper_analyzer/pdf/: ocr.py  (+2 more)
pipeline/: analyze_papers.py  build_profile.py  fetch_papers.py
skills/: project_memory.md
tests/: test_agent_jobs.py  test_agent_memory.py  test_agent_runtime.py  test_analyze_fetched_papers.py  test_analyzer.py  test_app_summary.py  test_build_profile.py  test_config.py  test_email_reader.py  test_feishu.py  test_fetch_papers.py  test_fulltext_resolver.py  test_llm_client.py  test_manual_fulltext.py  test_metadata_enricher.py  test_paper_library.py  test_pdf_parser.py  test_prompt.py  test_report_writer.py  test_schema.py  test_server_app.py  test_server_config.py  test_similarity.py  test_spis_fulltext.py  test_text_selector.py  test_weekly_report.py  test_wos_browser.py  test_wos_recommendations.py
(+10 files in other folders)
